# webchat

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  requirements-local.txt  requirements.txt  test_api.py
backend/: first_run_setup.py  main.py
backend/auth/: jwt_manager.py  offline_verifier.py
backend/config/: network_config.py
backend/services/: connection_manager.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  router.js
frontend/src/assets/styles/: main.css
frontend/src/components/: FooterBar.vue  HeaderBar.vue  MobileMenu.vue  NetworkStatus.vue  ThemeToggle.vue
frontend/src/stores/: auth.js  chat.js  network.js  theme.js
frontend/src/views/: CharacterView.vue  ChatView.vue  DashboardView.vue  LoginView.vue  NotFoundView.vue  RegisterView.vue  SettingsView.vue
local-inference/: auto_config.py  fallback_engine.py  health_check.py  llm_server.py  model_loader.py
local-inference/rust-core/: Cargo.toml
local-inference/rust-core/src/: lib.rs  network.rs  preprocessing.rs  tensorrt.rs
nginx/: chatbot.conf
scripts/: deploy_vds.sh  setup_local.ps1  setup_local.sh
